syntax = "proto3";
package x.auth;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "types/coin.proto";

option go_package = "github.com/pokt-network/pocket-core/x/auth/types";

// BaseAccount defines a base account type. It contains all the necessary fields
// for basic account functionality. Any custom account type should extend this
// type for additional functionality (e.g. vesting).
message BaseAccount {
	option (gogoproto.goproto_getters) = false;
	option (gogoproto.goproto_stringer) = false;
	option (cosmos_proto.implements_interface) = "Account";

	bytes address = 1 [(gogoproto.jsontag) = "address,omitempty", (gogoproto.casttype) = "github.com/pokt-network/pocket-core/types.Address"];
	bytes pub_key = 2 [(gogoproto.jsontag) = "public_key,omitempty", (gogoproto.moretags) = "yaml:\"public_key\""];
	repeated types.Coin coins = 3 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/pokt-network/pocket-core-/types.Coins"];
}

// ModuleAccount defines an account for modules that holds coins on a pool
message ModuleAccount {
	option (gogoproto.goproto_getters) = false;
	option (gogoproto.goproto_stringer) = false;
	option (cosmos_proto.implements_interface) = "ModuleAccountI";

	BaseAccount base_account = 1 [(gogoproto.embed) = true, (gogoproto.moretags) = "yaml:\"base_account\""];
	string name = 2;
	repeated string permissions = 3;
}
