syntax = "proto3";
package x.auth;
import "google/protobuf/any.proto";
import "gogoproto/gogo.proto";
import "x/auth/auth.proto";
import "types/coin.proto";

option go_package = "github.com/pokt-network/pocket-core/x/auth/types";

// GenesisState defines the auth module's genesis state.
message GenesisState {
	// params defines all the paramaters of the module.
	x.auth.Params params = 1 [(gogoproto.nullable) = false];

	// accounts are the accounts present at genesis.
	repeated google.protobuf.Any accounts = 2;
	repeated types.Coin supply = 3 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/pokt-network/pocket-core/types.Coins"];
}
